--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ matplotlib = ">=3.10.1,<4.0.0"
 seaborn = ">=0.13.2,<0.14.0"
 scikit-learn = ">=1.6.1,<2.0.0"
 plotly = ">=6.0.1,<7.0.0"
+imblearn = "^0.0"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
