--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ seaborn = ">=0.13.2,<0.14.0"
 scikit-learn = ">=1.6.1,<2.0.0"
 plotly = ">=6.0.1,<7.0.0"
 imblearn = "^0.0"
+nbformat = "^5.10.4"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
